--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tiny-react-demo",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://therobq.github.io/tiny-react-demo",
+  "homepage" : "http://robertquan.com/tiny-react-demo",
   "dependencies": {
     "@tinymce/tinymce-react": "^2.2.5",
     "react": "^16.4.2",
